@@ -1413,6 +1413,7 @@ FROM (SELECT ST_LineToCurve(ST_Buffer(ST_GeomFromText('POINT(234 567)'), 3)) As 
 
 	  <refsynopsisdiv>
 		<funcsynopsis>
+
 		  <funcprototype>
 			<funcdef>geometry <function>ST_Scale</function></funcdef>
 			<paramdef><type>geometry </type> <parameter>geomA</parameter></paramdef>
@@ -1433,6 +1434,14 @@ FROM (SELECT ST_LineToCurve(ST_Buffer(ST_GeomFromText('POINT(234 567)'), 3)) As 
 			<paramdef><type>geometry </type> <parameter>geom</parameter></paramdef>
 			<paramdef><type>geometry</type> <parameter>factor</parameter></paramdef>
 		  </funcprototype>
+
+		  <funcprototype>
+			<funcdef>geometry <function>ST_Scale</function></funcdef>
+			<paramdef><type>geometry </type> <parameter>geom</parameter></paramdef>
+			<paramdef><type>geometry</type> <parameter>factor</parameter></paramdef>
+			<paramdef><type>geometry</type> <parameter>origin</parameter></paramdef>
+		  </funcprototype>
+
 		</funcsynopsis>
 	  </refsynopsisdiv>
 
@@ -1448,6 +1457,9 @@ The version taking a geometry as the <varname>factor</varname> parameter
 allows passing a 2d, 3dm, 3dz or 4d point to set scaling factor for all
 supported dimensions. Missing dimensions in the <varname>factor</varname>
 point are equivalent to no scaling the corresponding dimension.
+    </para>
+    <para>
+        The three-geometry variant allows a "false origin" for the scaling to be passed in. This allows "scaling in place", for example using the centroid of the geometry as the false origin. Without a false origin, scaling takes place relative to the actual origin, so all coordinates are just multipled by the scale factor.
     </para>
 
 		<note><para>Prior to 1.3.4, this function crashes if used with geometries that contain CURVES.  This is fixed in 1.3.4+</para></note>
@@ -1486,6 +1498,11 @@ SELECT ST_AsEWKT(ST_Scale(ST_GeomFromEWKT('LINESTRING(1 2 3, 1 1 1)'), 0.5, 0.75
 ----------------------------------------
  LINESTRING(0.5 1.5 6 -4,0.5 0.75 2 -1)
 
+--Version 4: Scale X Y using false origin
+SELECT ST_AsText(ST_Scale('LINESTRING(1 1, 2 2)', 'POINT(2 2)', 'POINT(1 1)'::geometry));
+      st_astext
+---------------------
+ LINESTRING(1 1,3 3)
 
 </programlisting>
 	  </refsection>
